# cpp_python_DL_Training_Inference_Time_Comparison_on_CPU

./: README.md
cpp/: CMakeLists.txt  main.cpp
cpp/lib/: ConvNet.hpp  ConvNetClassifier.hpp  Dataset.hpp  utils.hpp
python/: getMnistDataset.py
